jwt token added

--- a/public/style.css
+++ b/public/style.css
@@ -61,7 +61,8 @@ img {
 	visibility: hidden;
 	min-width: 250px;
 	margin-left: -125px;
-	background-color: rgb(243, 108, 30);
+	/* background-color: rgb(243, 108, 30); */
+	/* background-color: rgb(72, 125, 204); */
 	color: #fff;
 	text-align: center;
 	border-radius: 2px;
@@ -77,6 +78,18 @@ img {
 	visibility: visible;
 	-webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
 	animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+.success{
+	background-color: rgb(61, 182, 61);
+}
+
+.error{
+	background-color: rgb(245, 38, 38);
+}
+
+.hidden {
+	display: none;
 }
   
 @-webkit-keyframes fadein {
